2011-03-26 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFLocale.c: (CFLocaleCopyDisplayNameForPropertyValue) Implemented.

2011-03-26 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFArray.m:
	* Source/NSCFType.m:
	* Source/CFNumber.m:
	* Source/CFError.m:
	* Source/CFStream.m:
	* Source/CFURL.m:
	* Source/CFDictionary.m:
	* Source/CFString.m:
	* Source/CFData.m: All NS objects should return _kCFRuntimeNotATypeID,
	except for NSCFType.
	* Source/CFRuntime.m: Check for NULL before trying to do anything.
	* Tests/CFLocale/create.m: Compile again.
	* Tests/CFTesting.h: Fixed mistake when PASS_CFNEQ was made into macro.

2011-03-26 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GNUmakefile:
	* Source/CFByteOrder.m:
	* Source/CFByteOrder.c: Rename.

2011-03-26 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFLocale.c: (CFLocaleCreateComponentsFromLocaleIdentifier)
	(CFLocaleCreateLocaleIdentifierFromComponents) Implemented.
	* Source/CFString.m: ([NSString-_cfTypeID]) Return the class.
	* Tests/CFTesting.h: Make arguments more unique.
	* Tests/CFLocale/general.m:
	* Tests/CFLocale/value.m: Renamed.
	* Tests/CFLocale/identifier.m: New set of tests.

2011-03-24 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.m: Improve interaction with ObjC objects.
	* Tests/CFTesting.h: Output in the same format as macros in Testing.h.
	* Tests/CFRuntime/runtime.m: Added toll-free bridge tests.

2011-03-23 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.m: (CFEqual) Check that type IDs are equal.
	* Tests/CFRuntime/runtime.m: Added description output tests.

2011-03-22 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.m:
	* Source/NSCFType.m: Make NSCFType class call CF functions instead
	of the other way around.
	* Tests/CFTesting.h: Include Testing.h here and make PASS_CF{,N}EQ
	inline functions.
	* Tests/CFRuntime/runtime.m: Added a couple of tests.

2011-03-22 Stefan Bidigaray <stefanbidi@gmail.com>
